-Removed unused log lines. -[BUG] The character id was not changed to negative to remove pending assets and I was removing the real character assets. -Correcting web rendering to match the Android look and the opposite. -Adding sort code for ordering the contents. -Optimizing duplicated code on pages to avoid bugs by desynchronization of code.
Former-commit-id: dd994b333f57ea5697b1903cf44f69276d7bceb3

--- a/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
+++ b/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
@@ -1,16 +1,15 @@
-<div class="neocom-panel" id="content">
+<div class="neocom-panel" id="panelborder-red">
   <table class="neocom-panel-container" cellspacing="0" cellpadding="0" width="100%">
-    <!-- <a class="no-underline" [routerLink]="['/login',node.getLoginId(),'pilotroaster']"> -->
     <tr>
       <td><img class="neocom-icon" src="/assets/icons/{{node.getPanelIcon()}}" id="iconsize-48"></td>
       <td width="80% " class="neocom-panel-column">
         <div>
-          <span class="neocom-selectable-name">{{node.getLoginId()}}</span><br>
+          <span class="neocom-selectable-name" id="neocom-ts20">{{node.getLoginId()}}</span><br>
         </div>
       </td>
       <td width="20%" class="neocom-panel-right-box" align="right ">
         <div class="neocom-account-class">LOGIN</div>
-        <div *ngIf="!node.downloadPending" class="stack-counter lined-bottomline">{{node.getKeyCount()}}</div>
+        <div *ngIf="!node.downloadPending" class="stack-counter">{{node.getKeyCount()}}</div>
         <div class="neocom-label label-small">CHARACTERS</div>
       </td>
       <td width="5%" *ngIf="isExpandable()" class="neocom-arrow-box" (click)="clickArrow()">
