--- a/Neocom.WebUI/src/app/components/pilot4-login/pilot4-login.component.html
+++ b/Neocom.WebUI/src/app/components/pilot4-login/pilot4-login.component.html
@@ -1,4 +1,4 @@
-<div class="neocom-panel" id="panelborder-green">
+<div class="neocom-panel" id="panelborder-orange">
   <table class="neocom-panel-container" cellspacing="0" cellpadding="0" width="100%">
     <a class="no-underline" [routerLink]="['/login',getLoginId(),'pilot',node.getId()]">
       <tr>
@@ -16,10 +16,10 @@
             </tr>
             <tr>
               <td align="left">
-                <div class="neocom-label">Balance</div>
+                <div class="neocom-label">BALANCE</div>
               </td>
               <td align="right">
-                <div class="neocom-label">Assets</div>
+                <div class="neocom-label">ASSETS</div>
               </td>
             </tr>
           </table>
