--- a/Neocom.WebUI/src/app/pages/planetary-optimization-page/planetary-optimization-page.component.html
+++ b/Neocom.WebUI/src/app/pages/planetary-optimization-page/planetary-optimization-page.component.html
@@ -1,6 +1,6 @@
 <div class="title-box">
   <div class="title">Planetary Manager</div>
-  <div class="subtitle">Processing Optimization at Location: {{getTargetLocation()}}</div>
+  <div class="subtitle">Processing Optimization at Location: {{getTargetName()}}</div>
 </div>
 <div class="spinner-box spinner-sz30" *ngIf="downloading">
   <div class="spinner-in spinner-size60"></div>
