--- a/Neocom.WebUI/src/app/components/location/location.component.html
+++ b/Neocom.WebUI/src/app/components/location/location.component.html
@@ -1,5 +1,5 @@
 <div class="neocom-panel" id="content">
-  <div class="panel-collapsed" [ngClass]="{'panel-expanded': node.expanded}">
+  <div class="panel-collapsed" [ngClass]="{'panel-orange-expanded': node.expanded}">
     <table class="neocom-panel-container" cellspacing="0" cellpadding="0" width="100%">
       <tr>
         <td>
