-Processing downloaded assets when bein received at Anguar.
Former-commit-id: 53b0727f3e19dc710064922f5501954b8a6c4206

--- a/Neocom.WebUI/src/app/pages/assets-manager-page/assets-manager-page.component.html
+++ b/Neocom.WebUI/src/app/pages/assets-manager-page/assets-manager-page.component.html
@@ -12,5 +12,6 @@
     <neocom-asset *ngIf="render.jsonClass == 'Asset'" [viewer]="getViewer()" [node]="render"></neocom-asset>
     <neocom-separator *ngIf="render.jsonClass == 'Separator'" [viewer]="getViewer()" [node]="render"></neocom-separator>
     <neocom-container *ngIf="render.jsonClass == 'Container'" [viewer]="getViewer()" [node]="render"></neocom-container>
+    <neocom-ship *ngIf="render.jsonClass == 'Ship'" [viewer]="getViewer()" [node]="render"></neocom-ship>
   </div>
 </div>
