--- a/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
+++ b/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
@@ -7,15 +7,28 @@
           <span class="neocom-selectable-name" id="neocom-ts20">{{node.getLoginId()}}</span><br>
         </div>
       </td>
+      <!-- RIGHT BLOCK -->
       <td width="20%" class="neocom-panel-right-box" align="right ">
         <div class="neocom-account-class">LOGIN</div>
         <div *ngIf="!node.downloadPending" class="stack-counter">{{node.getKeyCount()}}</div>
         <div class="neocom-label label-small">CHARACTERS</div>
       </td>
+      <!-- MENU BLOCK -->
+      <td *ngIf="hasMenu()" width="5%" class="">
+        <div class="">
+          <!-- <a class="no-underline" [routerLink]="['/login',getLoginId(),'pilot',getCharacterId(),'PlanetaryManager','location',getLocationId(),'PlanetaryOptimization']"> -->
+          <img src="/assets/icons/menuicon.jpg" width="16px" height="16px" style="filter: invert(100%);">
+          <!-- </a> -->
+        </div>
+      </td>
+      <!-- RIGHT ARROW -->
       <td width="5%" *ngIf="isExpandable()" class="neocom-arrow-box" (click)="clickArrow()">
         <img class="neocom-arrow" [ngClass]="{'neocom-arrow-expanded': node.expanded}" src="/assets/icons/arrowright.png ">
       </td>
+      <!-- SEPARATOR WHEN NO RIGHT ARROW -->
+      <td width="5%" *ngIf="!isExpandable()">
+        &nbsp;&nbsp;&nbsp;
+      </td>
     </tr>
-    <!-- </a> -->
   </table>
 </div>
