--- a/Neocom.WebUI/src/app/components/pilot4-login/pilot4-login.component.html
+++ b/Neocom.WebUI/src/app/components/pilot4-login/pilot4-login.component.html
@@ -11,7 +11,7 @@
                 <div class="pilot-balance glow-white lined-bottomline" id="neocom-ts12">{{node.accountBalance | number:'1.2-2'}} ISK</div>
               </td>
               <td align="right">
-                <div class="stack-counter glow-white lined-bottomline" id="neocom-ts12">{{node.assetTotalCount | number:'1.0-0'}}</div>
+                <div class="stack-counter glow-white lined-bottomline" id="neocom-ts12">{{node.assetCount | number:'1.0-0'}}</div>
               </td>
             </tr>
             <tr>
@@ -26,15 +26,26 @@
           <span class="neocom-marked-name neocom-marked-glow lined-bottomline" id="neocom-ts12">{{node.characterInfo.skillPoints | number:'1.0-0'}} SP</span><br>
           <div class="neocom-label">Total SP</div>
         </td>
+        <!-- RIGHT BLOCK -->
         <td width="30%" class="neocom-panel-right-box" align="right ">
           <div class="neocom-account-class" id="neocom-ts12">{{getCharacterClass()}}</div>
           <div class="" id="neocom-ts12">{{node.characterInfo.race | lowercase | capitalizeLetter}}</div>
           <div class="neocom-marked-name" id="neocom-ts12">{{node.characterSheet.cloneName}}</div>
           <div class="" style="color:red" id="neocom-ts12">Expired</div>
         </td>
+        <!-- MENU BLOCK -->
+        <td *ngIf="hasMenu()" width="5%" class="">
+          <div class="">
+            <!-- <a class="no-underline" [routerLink]="['/login',getLoginId(),'pilot',getCharacterId(),'PlanetaryManager','location',getLocationId(),'PlanetaryOptimization']"> -->
+            <img src="/assets/icons/menuicon.jpg" width="16px" height="16px" style="filter: invert(100%);">
+            <!-- </a> -->
+          </div>
+        </td>
+        <!-- RIGHT ARROW -->
         <td width="5%" *ngIf="isExpandable()" class="neocom-arrow-box" (click)="clickArrow()">
           <img class="neocom-arrow" [ngClass]="{'neocom-arrow-expanded': node.expanded}" src="/assets/icons/arrowright.png ">
         </td>
+        <!-- SEPARATOR WHEN NO RIGHT ARROW -->
         <td width="5%" *ngIf="!isExpandable()">
           &nbsp;&nbsp;&nbsp;
         </td>
