--- a/Neocom.WebUI/src/app/components/region/region.component.html
+++ b/Neocom.WebUI/src/app/components/region/region.component.html
@@ -8,11 +8,13 @@
         <td width="80%" class="neocom-panel-column">
           <span class="neocom-selectable-name" id="neocom-ts20">{{node.title}}</span>
         </td>
+        <!-- RIGHT BLOCK -->
         <td width="20%" class="neocom-panel-right-box" align="right ">
           <div class="neocom-classname-white" id="neocom-ts14">REGION</div>
           <div class="stack-counter">{{node.locationCount}}</div>
           <div class="neocom-label">STATIONS</div>
         </td>
+        <!-- MENU BLOCK -->
         <td *ngIf="hasMenu()" width="5%" class="">
           <div class="">
             <!-- <a class="no-underline" [routerLink]="['/login',getLoginId(),'pilot',getCharacterId(),'PlanetaryManager','location',getLocationId(),'PlanetaryOptimization']"> -->
@@ -20,11 +22,13 @@
             <!-- </a> -->
           </div>
         </td>
-        <td width="5%" *ngIf="!isExpandable()">
-          <span>&nbsp;&nbsp;</span>
-        </td>
+        <!-- RIGHT ARROW -->
         <td width="5%" *ngIf="isExpandable()" class="neocom-arrow-box" (click)="clickArrow()">
           <img class="neocom-arrow" [ngClass]="{'neocom-arrow-expanded': node.expanded}" src="/assets/icons/arrowright.png ">
+        </td>
+        <!-- SEPARATOR WHEN NO RIGHT ARROW -->
+        <td width="5%" *ngIf="!isExpandable()">
+          &nbsp;&nbsp;&nbsp;
         </td>
       </tr>
     </table>
