--- a/Neocom.WebUI/src/app/components/separator/separator.component.css
+++ b/Neocom.WebUI/src/app/components/separator/separator.component.css
@@ -16,6 +16,15 @@
   box-shadow: inset 0px 0px 4px 1px orange, 0px 0px 4px 1px orange;
 }
 
+.solid-yellow {
+  height: 4px;
+  line-height: 1.0;
+  opacity: 0.7;
+  width: 60%;
+  border: 1px yellow solid;
+  box-shadow: inset 0px 0px 4px 1px yellow, 0px 0px 4px 1px yellow;
+}
+
 .solid-green {
   height: 4px;
   line-height: 1.0;
