-[FEATURE][ASSETS] Ships not packed should be shown as Ships and be expandable to see their fitting. -New Separator colors. -[BUG] Remove the expand state from downloaded Locations because their state on the backend may not match the state at the frontend. -Removed all commented out code. -Added a set if icons from the Android project. -New backend API to access data through the common enties of collaboration.
Former-commit-id: 88ece88b36b9ee7a5081923188b8c17698780e82

--- a/Neocom.WebUI/src/app/components/container/container.component.html
+++ b/Neocom.WebUI/src/app/components/container/container.component.html
@@ -1,3 +1,4 @@
+<p>Container</p>
 <div class="neocom-panel" id="panelborder-yellow">
   <div [ngClass]="{'panel-yellow-expanded': node.expanded}">
     <table class="neocom-panel-container" cellspacing="0" cellpadding="0" width="100%">
