--- a/Neocom.WebUI/src/app/components/separator/separator.component.css
+++ b/Neocom.WebUI/src/app/components/separator/separator.component.css
@@ -33,6 +33,14 @@
   border: 1px green solid;
   box-shadow: inset 0px 0px 4px 1px green, 0px 0px 4px 1px green;
 }
+.solid-blue {
+  height: 4px;
+  line-height: 1.0;
+  opacity: 0.7;
+  width: 60%;
+  border: 1px blue solid;
+  box-shadow: inset 0px 0px 4px 1px blue, 0px 0px 4px 1px blue;
+}
 
 .empty-marker {
   height: 4px;
