--- a/Neocom.WebUI/src/styles.css
+++ b/Neocom.WebUI/src/styles.css
@@ -170,6 +170,14 @@ body {
   text-shadow: 0px 0px 2px #50B71D;
 }
 
+.neocom-marked-name {
+  color: orange;
+}
+
+.neocom-name {
+  color: white;
+}
+
 .neocom-data {
   color: white;
   font-size: 12px;
@@ -197,15 +205,14 @@ body {
   /*text-shadow: 0px 0px 2px white;*/
 }
 
-.neocom-marked-name {
-  color: orange;
-}
-
 .neocom-marked-glow {
   color: orange;
   font-weight: 600;
   text-shadow: 0px 0px 2px orange;
 }
+
+
+/* D E C O R A T O R S */
 
 .glow-marked {
   color: orange;
@@ -327,7 +334,7 @@ body {
 }
 
 .panel-blue-expanded {
-  background-color: #0F0F25;
+  background-color: #080825;
 }
 
 .neocom-panel-container {
@@ -508,6 +515,100 @@ body {
 }
 
 #panelborder-orange>:first-child:after {
+  border-width: 0 0 2px 2px;
+  bottom: 0;
+  left: 0
+}
+
+#panelborder-yellow {
+  line-height: 1.0;
+  background-color: #080808;
+  height: auto;
+  margin-bottom: 5px;
+  opacity: 0.8;
+  position: relative;
+  width: 60%;
+}
+
+#panelborder-yellow:hover {
+  opacity: 1.0
+}
+
+#panelborder-yellow:before, #panelborder-yellow:after, #panelborder-yellow>:first-child:before, #panelborder-yellow>:first-child:after {
+  border: 2px yellow solid;
+  content: ' ';
+  filter: blur(1px);
+  height: 15px;
+  position: absolute;
+  width: 15px;
+}
+
+#panelborder-yellow:before {
+  border-width: 2px 0 0 2px;
+  left: 0;
+  top: 0;
+}
+
+#panelborder-yellow:after {
+  border-width: 2px 2px 0 0;
+  right: 0;
+  top: 0;
+}
+
+#panelborder-yellow>:first-child:before {
+  border-width: 0 2px 2px 0;
+  bottom: 0;
+  right: 0
+}
+
+#panelborder-yellow>:first-child:after {
+  border-width: 0 0 2px 2px;
+  bottom: 0;
+  left: 0
+}
+
+#panelborder-blue {
+  line-height: 1.0;
+  background-color: #080808;
+  height: auto;
+  margin-bottom: 5px;
+  opacity: 0.8;
+  position: relative;
+  width: 60%;
+}
+
+#panelborder-blue:hover {
+  opacity: 1.0
+}
+
+#panelborder-blue:before, #panelborder-blue:after, #panelborder-blue>:first-child:before, #panelborder-blue>:first-child:after {
+  border: 2px blue solid;
+  content: ' ';
+  filter: blur(1px);
+  height: 15px;
+  position: absolute;
+  width: 15px;
+}
+
+#panelborder-blue:before {
+  border-width: 2px 0 0 2px;
+  left: 0;
+  top: 0;
+}
+
+#panelborder-blue:after {
+  border-width: 2px 2px 0 0;
+  right: 0;
+  top: 0;
+}
+
+#panelborder-blue>:first-child:before {
+  border-width: 0 2px 2px 0;
+  bottom: 0;
+  right: 0
+}
+
+#panelborder-blue>:first-child:after {
   border-width: 0 0 2px 2px;
   bottom: 0;
   left: 0
