-Save moved files while I complete a first level for the development and make it work again. -Add the generic component to render any type of node. -[WIP] Writing the code to connect the new generic component and the Page/Activity to render the Credentials.
Former-commit-id: 00e268691b26cf7b7d2a416f6e133a1651a75bc6

--- a/Neocom.WebUI/src/app/components/factory/component-factory/component-factory.component.html
+++ b/Neocom.WebUI/src/app/components/factory/component-factory/component-factory.component.html
@@ -1,3 +1,10 @@
-<p>
-  component-factory works!
-</p>
+<neocom-spinner-central *ngIf="downloading" [configuration]="{title:'Downloading Login list',subtitle:''}"></neocom-spinner-central>
+<div class="neocom-panel-container">
+  <div *ngFor="let render of loginViewList">
+    <neocom-separator *ngIf="render.jsonClass == 'Separator'" [viewer]="getViewer()" [node]="render"></neocom-separator>
+    <neocom-login4-list *ngIf="render.jsonClass == 'Login'" [viewer]="getViewer()" [node]="render"></neocom-login4-list>
+    <neocom-pilot4-login *ngIf="render.jsonClass == 'NeoComCharacter'" [viewer]="getViewer()" [node]="render"></neocom-pilot4-login>
+    <neocom-pilot4-login *ngIf="render.jsonClass == 'Pilot'" [viewer]="getViewer()" [node]="render"></neocom-pilot4-login>
+    <neocom-pilot4-login *ngIf="render.jsonClass == 'Corporation'" [viewer]="getViewer()" [node]="render"></neocom-pilot4-login>
+  </div>
+</div>
