-Moved core functionality for pages to the core component. -Added the two new display sections, the server information (now empty) and the detailed block for the selected node. -Moved components to organize structures.
Former-commit-id: c7fadde68b0b013ae762f0c1d8181b8b04c29382

--- a/Neocom.WebUI/src/app/components/factory/component-factory/component-factory.component.html
+++ b/Neocom.WebUI/src/app/components/factory/component-factory/component-factory.component.html
@@ -1,6 +1,6 @@
 <neocom-spinner-central *ngIf="downloading" [configuration]="{title:'Downloading Login list',subtitle:''}"></neocom-spinner-central>
 <div class="neocom-panel-container">
-  <div *ngFor="let render of getBodyParts()">
+  <div *ngFor="let render of getBodyComponents()">
     <neocom-separator *ngIf="render.jsonClass == 'Separator'" [viewer]="getViewer()" [node]="render"></neocom-separator>
     <neocom-credential *ngIf="render.jsonClass == 'Credential'" [viewer]="getViewer()" [node]="render"></neocom-credential>
     <neocom-login4-list *ngIf="render.jsonClass == 'Login'" [viewer]="getViewer()" [node]="render"></neocom-login4-list>
