--- a/Neocom.WebUI/src/app/app.component.html
+++ b/Neocom.WebUI/src/app/app.component.html
@@ -1,2 +1,10 @@
-<neocom-header></neocom-header>
+<div style="width: 60%; float:left">
+  <neocom-header></neocom-header>
+</div>
+
+<div style="width: 40%; float:right">
+  <div id="panelborder-red">
+    <span>SERVER INFORMATION SECTION</span>
+  </div>
+</div>
 <router-outlet></router-outlet>
