--- a/Neocom.WebUI/src/app/pages/credentials-page/credentials-page.component.html
+++ b/Neocom.WebUI/src/app/pages/credentials-page/credentials-page.component.html
@@ -1,19 +1,6 @@
 <div style="width: 60%; float:left">
   <neocom-component-factory [dataSource]="getDataSource()"></neocom-component-factory>
 </div>
-
 <div style="width: 40%; float:right">
-  <div id="panelborder-red">
-    <span>COLUMN 2</span>
-  </div>
+  <neocom-detailed-container [selectedNode]="getSelectedNode()"></neocom-detailed-container>
 </div>
-
-
-<!-- <table>
-  <tr>
-    <td width="60%">
-    </td>
-    <td width="40%" height="100%">
-    </td>
-  </tr>
-</table> -->
