-[WS] Updated new database names and authentication. -[WS] Added Idea configuration to project. -[WS] Validated the refresh tokens for initialization. -[WEB] Removal for 60% sizing. New layout for the first page. -[WEB] Initialized the ActionBar component but still empty.
Former-commit-id: a2619d27cfa29fbd26be67c46db1823de940e934

--- a/Neocom.WebUI/src/app/pages/credentials-page/credentials-page.component.html
+++ b/Neocom.WebUI/src/app/pages/credentials-page/credentials-page.component.html
@@ -1,3 +1,6 @@
+<div id="panelborder-red">
+  <neocom-action-bar></neocom-action-bar>
+</div>
 <div style="width: 60%; float:left">
   <neocom-component-factory [dataSource]="getDataSource()"></neocom-component-factory>
 </div>
