--- a/Neocom.WebUI/src/app/app.component.html
+++ b/Neocom.WebUI/src/app/app.component.html
@@ -1,8 +1,7 @@
-<div style="width: 60%; float:left">
+<div style="width: 60%; float: left;">
   <neocom-header></neocom-header>
 </div>
-
-<div style="width: 40%; float:right">
+<div style="width: 40%; float: right;">
   <div id="panelborder-red">
     <span>SERVER INFORMATION SECTION</span>
   </div>
