-Added the hover selection to show a detailed view at the right side. -[WIP] Pending the control of the rendering variant for the component. Flow is so complex that it is not clear where is the problem.
Former-commit-id: a266dfc92189f88e701006fbedbeeadc7c71a57d

--- a/Neocom.WebUI/src/app/components/factory/detailed-container/detailed-container.component.html
+++ b/Neocom.WebUI/src/app/components/factory/detailed-container/detailed-container.component.html
@@ -1,7 +1,7 @@
 <div id="panelborder-red">
-  <span>DETAILED INFORMATION SECTION</span>
-  <neocom-separator *ngIf="getSelectedNodeClass() == 'Separator'"></neocom-separator>
-  <neocom-credential *ngIf="getSelectedNodeClass() == 'Credential'"></neocom-credential>
+  <span>DETAILED INFORMATION SECTION {{getSelectedNodeClass()}}</span>
+  <neocom-separator *ngIf="getSelectedNodeClass() == 'Separator'" [node]="getSelectedNode()"></neocom-separator>
+  <neocom-credential *ngIf="getSelectedNodeClass() == 'Credential'" [node]="getSelectedNode()" [variant]="DETAIL"></neocom-credential>
   <neocom-login4-list *ngIf="getSelectedNodeClass() == 'Login'"></neocom-login4-list>
   <neocom-pilot4-login *ngIf="getSelectedNodeClass() == 'NeoComCharacter'"></neocom-pilot4-login>
   <neocom-pilot4-login *ngIf="getSelectedNodeClass() == 'Pilot'"></neocom-pilot4-login>
