--- a/Neocom.WebUI/src/app/pages/credentials-page/credentials-page.component.html
+++ b/Neocom.WebUI/src/app/pages/credentials-page/credentials-page.component.html
@@ -1,9 +1,11 @@
-<div id="panelborder-red">
-  <neocom-action-bar></neocom-action-bar>
-</div>
-<div style="width: 60%; float:left">
-  <neocom-component-factory [dataSource]="getDataSource()"></neocom-component-factory>
-</div>
-<div style="width: 40%; float:right">
-  <neocom-detailed-container [selectedNode]="getSelectedNode()"></neocom-detailed-container>
+<div style="width: 100%">
+  <div>
+    <neocom-action-bar></neocom-action-bar>
+  </div>
+  <div style="width: 60%; float:left">
+    <neocom-component-factory [dataSource]="getDataSource()"></neocom-component-factory>
+  </div>
+  <div style="width: 40%; float:right">
+    <neocom-detailed-container [selectedNode]="getSelectedNode()"></neocom-detailed-container>
+  </div>
 </div>
