--- a/Neocom.WebUI/src/app/components/model/credential/credential.component.html
+++ b/Neocom.WebUI/src/app/components/model/credential/credential.component.html
@@ -32,3 +32,17 @@
     </tr>
   </table>
 </div>
+<div *ngIf="getRenderVariant() == 'DETAIL'" class="neocom-panel" id="panelborder-red">
+  <table class="neocom-panel-container" cellspacing="0" cellpadding="0" width="100%">
+    <tr>
+      <td><img class="neocom-icon" src="/assets/res-window/drawable/grouplist.png" id="iconsize-48"></td>
+    </tr>
+    <tr>
+      <td width="80% " class="neocom-panel-column">
+        <div>
+          <span class="neocom-selectable-name" id="neocom-ts20">{{node.accountName}}</span><br>
+        </div>
+      </td>
+    </tr>
+  </table>
+</div>
