-Upgraded the factories to use the new IDataSource interface as the base api for interactions. -Optimized the BasePage to be abstract and to use the new interface. -Connected the hover to the selection of the node.
Former-commit-id: aa6c7c45ab6d8d3f1055affa45f287f95836baf8

--- a/Neocom.WebUI/src/app/components/factory/detailed-container/detailed-container.component.html
+++ b/Neocom.WebUI/src/app/components/factory/detailed-container/detailed-container.component.html
@@ -1,9 +1,5 @@
-<div id="panelborder-red">
-  <span>DETAILED INFORMATION SECTION {{getSelectedNodeClass()}}</span>
-  <neocom-separator *ngIf="getSelectedNodeClass() == 'Separator'" [node]="getSelectedNode()"></neocom-separator>
-  <neocom-credential *ngIf="getSelectedNodeClass() == 'Credential'" [node]="getSelectedNode()" [variant]="DETAIL"></neocom-credential>
-  <neocom-login4-list *ngIf="getSelectedNodeClass() == 'Login'"></neocom-login4-list>
-  <neocom-pilot4-login *ngIf="getSelectedNodeClass() == 'NeoComCharacter'"></neocom-pilot4-login>
-  <neocom-pilot4-login *ngIf="getSelectedNodeClass() == 'Pilot'"></neocom-pilot4-login>
-  <neocom-pilot4-login *ngIf="getSelectedNodeClass() == 'Corporation'"></neocom-pilot4-login>
+<div>
+  <span>DETAILED INFORMATION SECTION NodeClass: {{getSelectedNodeClass()}} - Test: {{getSelectedNodeClass() === 'Credential'}}</span><br>
+  <span>{{getSelectedNode()}}</span>
+  <neocom-credential *ngIf="getSelectedNodeClass() === 'Credential'" [node]="getSelectedNode()" [variant]="DETAIL"></neocom-credential>
 </div>
