--- a/Neocom.WebUI/src/app/pages/credentials-page/credentials-page.component.html
+++ b/Neocom.WebUI/src/app/pages/credentials-page/credentials-page.component.html
@@ -3,6 +3,7 @@
     <neocom-action-bar></neocom-action-bar>
   </div>
   <div style="width: 60%; float:left">
+    <neocom-spinner-central *ngIf="downloading" [configuration]="{title:'Downloading Login list',subtitle:''}"></neocom-spinner-central>
     <neocom-component-factory [dataSource]="getDataSource()"></neocom-component-factory>
   </div>
   <div style="width: 40%; float:right">
