-[BUG][WEB] The new connection to the main list generates an infinite loop on the update of the UI. Cut this off.
Former-commit-id: 3dddebf48a1bbb8f761a307aff12e0f01bb2ce30

--- a/Neocom.WebUI/src/app/components/factory/component-factory/component-factory.component.html
+++ b/Neocom.WebUI/src/app/components/factory/component-factory/component-factory.component.html
@@ -2,9 +2,9 @@
   <div *ngFor="let render of getBodyComponents()">
     <neocom-separator *ngIf="render.jsonClass == 'Separator'" [viewer]="getViewer()" [node]="render"></neocom-separator>
     <neocom-credential *ngIf="render.jsonClass == 'Credential'" [viewer]="getViewer()" [node]="render" (mouseenter)="mouseEnter(render)"></neocom-credential>
-    <neocom-login4-list *ngIf="render.jsonClass == 'Login'" [viewer]="getViewer()" [node]="render"></neocom-login4-list>
+    <!-- <neocom-login4-list *ngIf="render.jsonClass == 'Login'" [viewer]="getViewer()" [node]="render"></neocom-login4-list>
     <neocom-pilot4-login *ngIf="render.jsonClass == 'NeoComCharacter'" [viewer]="getViewer()" [node]="render"></neocom-pilot4-login>
     <neocom-pilot4-login *ngIf="render.jsonClass == 'Pilot'" [viewer]="getViewer()" [node]="render"></neocom-pilot4-login>
-    <neocom-pilot4-login *ngIf="render.jsonClass == 'Corporation'" [viewer]="getViewer()" [node]="render"></neocom-pilot4-login>
+    <neocom-pilot4-login *ngIf="render.jsonClass == 'Corporation'" [viewer]="getViewer()" [node]="render"></neocom-pilot4-login> -->
   </div>
 </div>
