--- a/Neocom.WebUI/src/app/components/model/credential/credential.component.html
+++ b/Neocom.WebUI/src/app/components/model/credential/credential.component.html
@@ -32,7 +32,8 @@
     </a>
   </table>
 </div>
-<div *ngIf="getRenderVariant() == 'DETAIL'" class="neocom-panel" id="panelborder-red">
+<!-- <div>{{getRenderVariant()}}</div> -->
+<div *ngIf="getRenderVariant() === 'DETAIL'" class="neocom-panel" id="panelborder-red">
   <table class="neocom-panel-container" cellspacing="0" cellpadding="0" width="100%">
     <tr>
       <td><img class="neocom-icon" src="/assets/res-window/drawable/grouplist.png" id="iconsize-48"></td>
