--- a/Neocom.WebUI/src/app/app.component.html
+++ b/Neocom.WebUI/src/app/app.component.html
@@ -1,9 +1,17 @@
-<div style="width: 60%; float: left;">
-  <neocom-header></neocom-header>
-</div>
-<div style="width: 40%; float: right;">
-  <div id="panelborder-red">
-    <span>SERVER INFORMATION SECTION</span>
+<div>
+  <div style="width: 60%; float: left;">
+    <neocom-header></neocom-header>
+  </div>
+  <div style="width: 40%; float: right;">
+    <div id="panelborder-red">
+      <span>SERVER INFORMATION SECTION</span><br>
+      <span>Server Version: NeoComMS-0.11.0</span><br>
+      <span>SDE Database Version: 118.0</span><br>
+      <span>NeoCom Database Version: 110</span><br>
+      <span>CCP server: tranquility</span>
+    </div>
   </div>
 </div>
-<router-outlet></router-outlet>
+<div style="width: 100%; float: none;">
+  <router-outlet></router-outlet>
+</div>
